@@ -1,5 +1,9 @@
 *** CHANGELOG ***
 
+2019-04-26
+Change pan window button to LMB
+Change pan view button to RMB
+
 2019-04-25
 Add include header stb_image.h
 Add test OpenGL rendering
